quil-rs/src/program/snapshots/quil_rs__program__graphviz_dot__tests__graph__chained_pulses.snap
---
source: src/program/graphviz_dot.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="frame"];
    "block_0_start" -> "block_0_end" [label="frame
ordering"];
    "block_0_0" [shape=rectangle, label="[0] PULSE 0 \"rf\" test(duration: 1000000)"];
    "block_0_0" -> "block_0_1" [label="frame"];
    "block_0_0" -> "block_0_end" [label="frame"];
    "block_0_1" [shape=rectangle, label="[1] PULSE 0 \"rf\" test(duration: 1000000)"];
    "block_0_1" -> "block_0_2" [label="frame"];
    "block_0_1" -> "block_0_end" [label="frame"];
    "block_0_2" [shape=rectangle, label="[2] PULSE 0 \"rf\" test(duration: 1000000)"];
    "block_0_2" -> "block_0_3" [label="frame"];
    "block_0_2" -> "block_0_end" [label="frame"];
    "block_0_3" [shape=rectangle, label="[3] PULSE 0 \"rf\" test(duration: 1000000)"];
    "block_0_3" -> "block_0_4" [label="frame"];
    "block_0_3" -> "block_0_end" [label="frame"];
    "block_0_4" [shape=rectangle, label="[4] PULSE 0 \"rf\" test(duration: 1000000)"];
    "block_0_4" -> "block_0_end" [label="frame"];
    "block_0_end" [shape=circle, label="end"];
  }
}

